--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
     <junit.jupiter.version>5.9.1</junit.jupiter.version>
     <junit.platform.version>1.9.1</junit.platform.version>
     <selenium.version>4.9.0</selenium.version>
+    <webdrivermanager.version>5.3.2</webdrivermanager.version>
     <maven.compiler.source>17</maven.compiler.source>
     <maven.compiler.target>17</maven.compiler.target>
   </properties>
@@ -48,6 +49,11 @@
       <artifactId>junit-platform-suite</artifactId>
       <version>${junit.platform.version}</version>
       <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>io.github.bonigarcia</groupId>
+      <artifactId>webdrivermanager</artifactId>
+      <version>${webdrivermanager.version}</version>
     </dependency>
   </dependencies>
 </project>
